# fzysxh

./: command.txt  readme.md
51单片机/单片机编程/1-点亮第一个LED灯！/: LED  LED.M51  LED.plg  LED.uvopt  LED_uvproj.bak  main.LST  main.c
51单片机/单片机编程/10-LED二进制显示/: dd.uvgui.fzy  dd.uvopt  dd.uvproj  main.c
51单片机/单片机编程/11-LCD液晶屏/: LCD.uvgui.fzy  LCD.uvproj  main.c
51单片机/单片机编程/12-矩阵键盘锁/: main.c  out.c  out.h  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/13.1-独立按键控制流水灯模式/: Timer0.c  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/13.2-时钟/: main.c  project.uvgui.fzy  project.uvproj
51单片机/单片机编程/14-串口-简单收发递增数据/: UART.c  UART.h  delay.c  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/15.1-LED点阵显示/: MLED.c  MLED.h  _74HC595.c  _74HC595.h  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/15.2-LED平移动画/: Timer0.c  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/16.1-DS1302时钟/: DS1302.c  DS1302.h  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/16.2-DS1302可调时钟/: DS1302.h  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/17.1-DS18B20显示温度/: DS18B20.c  DS18B20.h  main.c  project.uvgui.fzy  project.uvopt  project.uvproj
51单片机/单片机编程/18.1-AT24C02储存数据/: AT24C02.c  I2C.c  I2C.h  independence_con.h  main.c  project.uvgui.fzy  project.uvopt  (+1 more)
Linux/: 1main.py  spidev_test.cpp  usart.py  usart1.c
Linux/tcp_cli/: CMakeLists.txt  tcp_cli.cpp
Linux/tcp_ser/: CMakeLists.txt  tcp_ser.cpp
STM32代码/源码/: 0.0-readme.txt
通讯录管理系统/: main.cpp
(+630 files in other folders)
